@@ -15,8 +15,8 @@ generating autocorrelated and cross-correlated matrices.
 \tabular{ll}{
 Package: \tab synchrony\cr
 Type: \tab Package\cr
-Version: \tab 0.3.7\cr
-Date: \tab 2018-05-19\cr
+Version: \tab 0.3.8\cr
+Date: \tab 2019-12-05\cr
 License: \tab GPL (>=2)\cr
 URL: \tab http://synchrony.r-forge.r-project.org\cr
 LazyLoad: \tab yes\cr
